Base Editor Finished

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<h1>Simplified Proxies</h1>
 	<p>Proxies for Magic the Gathering, Simplified!</p>
 	<br class="mb-10"/>
-	<a class="btn btn-primary" href="index.html">Open Magic the Gathering editor</a>
+	<a class="btn btn-primary" href="mtg.html">Open Magic the Gathering editor</a>
 </div>
 </body>
 </html>
