--- a/mtg.html
+++ b/mtg.html
@@ -72,7 +72,7 @@
 
 						<fieldset class="fieldset">
 							<legend class="fieldset-legend">Flavor Text</legend>
-							<textarea id="description" class="input input-bordered grow text-wrap min-h-20"
+							<textarea id="flavor-text" class="input input-bordered grow text-wrap min-h-20"
 									  placeholder="e.g. There were no tombstones in orochi territory. Slain warriors were buried with a tree sapling, so they would become a part of the forest after death."></textarea>
 						</fieldset>
 
@@ -168,6 +168,22 @@
 		<a class="btn btn-primary" href="index.html">Back Home</a>
 	</div>
 </div>
+
+<dialog id="confirm-delete-save" class="modal">
+	<div class="modal-box">
+		<h2>Are you Sure?</h2>
+		<br>
+		<p>This will delete <i>all</i> of your data, including any saved cards and current input values.</p>
+		<br>
+		<div class="flex flex-row items-center justify-center gap-4">
+			<button class="btn btn-primary" id="confirm-delete-save-cancel">Cancel</button>
+			<button class="btn btn-secondary" id="confirm-delete-save-yes">Yes, delete</button>
+		</div>
+	</div>
+	<form method="dialog" class="modal-backdrop">
+		<button>Cancel</button>
+	</form>
+</dialog>
 
 
 <script src="scripts/mtg/mtg_icon_database.js" type="application/javascript"></script>
