--- a/mtg.html
+++ b/mtg.html
@@ -97,7 +97,7 @@
 				<!-- card list -->
 				<div class="flex flex-col gap-2 p-2 grow max-h-full">
 					<h2>Cards</h2>
-					<p>Click a card to see it&apos;s preview</p>
+					<p>Click a card to see its preview</p>
 					<div class="divider p-0 m-0"></div>
 					<div class="flex flex-col overflow-y-auto gap-2 max-h-full overflow-y-auto" id="card-list">
 						<div class="p-3 rounded-md border hover:bg-gray-200">[Card Name]</div>
