text align on notes now works as intended

--- a/mtg.html
+++ b/mtg.html
@@ -143,7 +143,7 @@
 
 						<div class="grow"></div>
 
-						<div class="flex flex-row items-end gap-2 card-type-container">
+						<div class="flex flex-row items-end gap-2 card-bottom-container">
 							<p>
 								<i class="card-notes italic">
 									This is a note!
