--- a/mtg.html
+++ b/mtg.html
@@ -167,6 +167,9 @@
 		<button class="btn btn-secondary" id="delete-save">Delete Saved Data</button>
 		<button class="btn btn-accent" id="print-proxies">Print Proxies</button>
 		<a class="btn btn-primary" href="index.html">Back Home</a>
+
+		<div class="grow"></div>
+		<button class="btn btn-info" id="credits">Credits</button>
 	</div>
 </div>
 
@@ -180,6 +183,19 @@
 			<button class="btn btn-primary" id="confirm-delete-save-cancel">Cancel</button>
 			<button class="btn btn-secondary" id="confirm-delete-save-yes">Yes, delete</button>
 		</div>
+	</div>
+	<form method="dialog" class="modal-backdrop">
+		<button>Cancel</button>
+	</form>
+</dialog>
+
+<dialog id="credits-box" class="modal">
+	<div class="modal-box">
+		<h2>Credits</h2>
+		<br>
+		Colored Mana Icons: <a href="https://scryfall.com/" target="_blank" class="link">Scryfall</a> (adapted by me)
+		<br>
+		Black and White Mana Icons: <i>Goblin Hero</i> via <a href="https://slightlymagic.net" target="_blank" class="link">Slightly Magic</a> (converted to Black and White by me) <small><a href="https://www.slightlymagic.net/forum/viewtopic.php?t=4430" target="_blank" class="link">(Original thread)</a></small>
 	</div>
 	<form method="dialog" class="modal-backdrop">
 		<button>Cancel</button>
