--- a/mtg.html
+++ b/mtg.html
@@ -28,8 +28,15 @@
 					<div class="flex flex-col gap-2 overflow-y-auto">
 
 						<label class="label text-xs">
-							<input type="checkbox" class="checkbox checkbox-xs checkbox-primary" id="use-black-white-icons"/>
+							<input type="checkbox" class="checkbox checkbox-xs checkbox-primary"
+								   id="use-black-white-icons"/>
 							Use black and white icons
+						</label>
+
+						<label class="label text-xs">
+							<input type="checkbox" class="checkbox checkbox-xs checkbox-secondary"
+								   id="use-scryfall-search"/>
+							Use Scryfall search
 						</label>
 
 						<fieldset class="fieldset">
@@ -67,7 +74,8 @@
 								<input type="text" id="toughness"
 									   class="input input-bordered grow"/>
 							</div>
-							<p class="label">These can be omitted for non-creatures like lands.<br>If planeswalker loyalty is desired, setting only Power will work.</p>
+							<p class="label">These can be omitted for non-creatures like lands.<br>If planeswalker
+								loyalty is desired, setting only Power will work.</p>
 						</fieldset>
 
 						<fieldset class="fieldset">
@@ -195,7 +203,10 @@
 		<br>
 		Colored Mana Icons: <a href="https://scryfall.com/" target="_blank" class="link">Scryfall</a> (adapted by me)
 		<br>
-		Black and White Mana Icons: <i>Goblin Hero</i> via <a href="https://slightlymagic.net" target="_blank" class="link">Slightly Magic</a> (converted to Black and White by me) <small><a href="https://www.slightlymagic.net/forum/viewtopic.php?t=4430" target="_blank" class="link">(Original thread)</a></small>
+		Black and White Mana Icons: <i>Goblin Hero</i> via <a href="https://slightlymagic.net" target="_blank"
+															  class="link">Slightly Magic</a> (converted to Black and
+		White by me) <small><a href="https://www.slightlymagic.net/forum/viewtopic.php?t=4430" target="_blank"
+							   class="link">(Original thread)</a></small>
 	</div>
 	<form method="dialog" class="modal-backdrop">
 		<button>Cancel</button>
