Card overflow fix\n(hidden)

--- a/mtg.html
+++ b/mtg.html
@@ -53,6 +53,7 @@
 							<legend class="fieldset-legend">Card Name</legend>
 							<input type="text" id="card-name" placeholder="e.g. Sakura Tribe Elder"
 								   class="input input-bordered grow"/>
+							<p id="scryfall-result-error" class="text-error"></p>
 						</fieldset>
 
 
