Removed 75 card limit

--- a/mtg.html
+++ b/mtg.html
@@ -272,13 +272,13 @@
 		<br>
 		<fieldset class="fieldset">
 			<textarea id="import-cards-textarea" class="input input-bordered grow text-wrap min-h-20 w-full" placeholder="Cards go here..."></textarea>
-			<p class="label" id="import-cards-label">Max. 75 unique card names</p>
+			<p class="label" id="import-cards-chunks-label"></p>
 		</fieldset>
 
 		<br><br>
 		<div class="flex flex-row items-center justify-center gap-4 w-full">
 			<button class="btn btn-secondary grow" id="import-cards-cancel">Cancel</button>
-			<button class="btn btn-primary grow" id="import-cards-yes" disabled>Import</button>
+			<button class="btn btn-primary grow" id="import-cards-yes">Import</button>
 		</div>
 		<br>
 
