--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>Simplified Proxies</title>
 
+	<link rel="icon" href="images/favicon.svg" type="image/svg+xml"/>
 
 	<link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css"/>
 	<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
