--- a/mtg.html
+++ b/mtg.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Simplified Proxies - Magic the Gathering</title>
 
+	<link rel="icon" href="images/favicon.svg" type="image/svg+xml"/>
 
 	<link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css"/>
 	<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
