--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="magic the gathering, mtg, proxies, proxy, simplified, black and white, black white">
+	<meta name="description" content="Simplified Black and White Proxies for Magic the Gathering">
+
 	<title>Simplified Proxies</title>
 
 	<link rel="icon" href="images/favicon.svg" type="image/svg+xml"/>
