--- a/mtg.html
+++ b/mtg.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<title>Simplified Proxies - Magic the Gathering</title>
 
 	<link rel="icon" href="images/favicon.svg" type="image/svg+xml"/>
