--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-	<link href="style.css" rel="stylesheet"/>
+	<link href="styles/mtg.css" rel="stylesheet"/>
 </head>
 <body data-theme="light" class="min-h-screen bg-base-100 h-min text-2xl md:text-base">
 <div class="flex flex-col justify-center items-center h-screen">
