--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 	<link href="styles/mtg.css" rel="stylesheet"/>
 </head>
 <body data-theme="light" class="min-h-screen bg-base-100 h-min text-2xl md:text-base">
-<div class="flex flex-col justify-center items-center h-screen">
+<div class="flex flex-col justify-center items-center h-screen gap-2">
 	<h1>Simplified Proxies</h1>
-	<p>Proxies for Magic the Gathering, Simplified!</p>
+	<p>Proxies for Magic the Gathering and Pokémon Trading Card Game, Simplified!</p>
 	<br class="mb-10"/>
 	<a class="btn btn-primary" href="mtg.html">Open Magic the Gathering editor</a>
+	<a class="btn btn-primary" href="ptcg.html">Open Pokémon Trading Card Game editor</a>
 </div>
 </body>
 </html>
